# Korum

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  components.json  eslint.config.js  index.html  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/rules/: agent-status.md  build-release-ci.md  canvas-engine.md  design-system.md  keyboard-shortcuts.md  settings-system.md  workspaces-sidebar.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
LP/: index.html  script.js  site.webmanifest  styles.css
docs/: performance.md
docs/research/: 2026-06-28-korum-competitive-research.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dmg/: generate-background.py
src-tauri/icons/: icon.icns
src-tauri/src/: agent_status.rs  claude_usage.rs  codex_usage.rs  commands.rs  file_tree.rs  lib.rs  main.rs  pty.rs  quit_guard.rs  snapshot_export.rs  storage.rs
src/__mocks__/: tauri-api-core.ts  tauri-plugin-clipboard.ts  tauri-plugin-dialog.ts
src/lib/: agent-status-store.test.ts  agent-status-store.ts  agent-status.test.ts  agent-status.ts  code-window-performance.test.ts  code-window-performance.ts  code-window-rendering.test.ts  code-window-rendering.ts  code-window-target.test.ts  code-window-target.ts  code-window-virtualization.test.ts  code-window-virtualization.ts  command-center.test.ts  command-center.ts  demo-terminal-activation.test.ts  demo-terminal-activation.ts  demo-workspace-template.ts  (+58 more)
(+40 files in other folders)
