[package]
name = "korum"
version = "0.2.0-alpha"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-clipboard-manager = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ignore = "0.4"
git2 = "0.19"
notify-debouncer-mini = "0.5"

[profile.dev]
opt-level = 0

[profile.release]
strip = true
lto = true
